# GameOfLife

./: .chatbot-heightmap.html  .chatbot-heightmap.md  .clang-format  .gitignore  .gitmodules  ATTRIBUTION.md  CMakeLists.txt  README.md  SConstruct  main.cpp
.github/workflows/: CI.yml
ArtifficalInteligenceModels/: SConstruct  TorchNN.cpp
ArtifficalInteligenceModels/include/: Actor.h  Autoencoder.h  Critic.h  Decoder.h  Encoder.h  LocomotionNetwork.h  WalkingAgent.h
ArtifficalInteligenceModels/src/: Actor.cpp  Autoencoder.cpp  Critic.cpp  Decoder.cpp  Encoder.cpp  LocomotionNetwork.cpp  WalkingAgent.cpp
core/: SConstruct
core/include/: food.h  limb.h  object.h  organ.h  organism.h  simulationManager.h  utils.h
core/src/: food.cpp  limb.cpp  object.cpp  organ.cpp  organism.cpp  simulationManager.cpp  utils.cpp
dockerfiles/: gcc.Dockerfile
godot-impl/: gdlibrary.cpp  gdlibrary.os  godot_food.cpp  godot_food.h  godot_limb.cpp  godot_limb.h  godot_organism.cpp  godot_organism.h  height_map_mesh.cpp  height_map_mesh.h  height_map_mesh.os  height_map_static_body.cpp  height_map_static_body.h  height_map_static_body.os  managed_rigid_body.cpp  managed_rigid_body.h
godot-project/: 9 alpha.png.import  9.png.import  Camera.gd  FallingBall.tscn  MainScene.tscn  heightmap.png.import  heightmap2.png.import  project.godot  stylized bush.fbx.import  stylized bush.material
godot-project/.import/: 9 alpha.png-6fa0bfa3e7568b65946c90b90e9a9c89.md5  9 alpha.png-6fa0bfa3e7568b65946c90b90e9a9c89.stex  9.png-16f75f4f0ed492ce87b43d9082c79824.etc2.stex  9.png-16f75f4f0ed492ce87b43d9082c79824.md5  9.png-16f75f4f0ed492ce87b43d9082c79824.s3tc.stex  9.png-16f75f4f0ed492ce87b43d9082c79824.stex  heightmap.png-6f48792f8e9cde7ab5c63b4efb0fc57b.image  heightmap.png-6f48792f8e9cde7ab5c63b4efb0fc57b.md5  heightmap.png-6f48792f8e9cde7ab5c63b4efb0fc57b.stex  heightmap2.png-41e1c449674801ba277a358db5539366.image  heightmap2.png-41e1c449674801ba277a358db5539366.md5  heightmap2.png-41e1c449674801ba277a358db5539366.stex  stylized bush.fbx-3a55d2307cb38b2ffa5c1bf17e9b52fd.md5  stylized bush.fbx-3a55d2307cb38b2ffa5c1bf17e9b52fd.scn
project/: MainScene.tscn
src/: ball.cpp  ball.h  gdlibrary.cpp  height_map_mesh.cpp  height_map_mesh.h  height_map_static_body.cpp  height_map_static_body.h  main.cpp  main.h
tests/: .sconsign.dblite  LibTests.cpp  SConstruct  foodTests.cpp  limbTests.cpp  objectTests.cpp  organTests.cpp  organismTests.cpp
